# inscription_canister

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  docker-compose.yml  index.html  init.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: Cargo.toml  backend.did
backend/src/: bitcoin_api.rs  bitcoin_wallet.rs  ecdsa_api.rs  inscription.rs  lib.rs  schnorr_api.rs  types.rs
docker/: Dockerfile  bitcoin.conf
schnorr_canister/: Cargo.toml  schnorr_canister.did
schnorr_canister/src/: lib.rs
src/: App.css  App.tsx  main.tsx
