[package]
name = "backend"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.31.0", features = ["serde"] }
bs58 = "0.5.0"
candid = "0.9.10"
hex = "0.4.3"
ic-cdk = "0.11.0"
ic-stable-structures = "0.6"
ripemd = "0.1.1"
serde = "1.0.195"
sha2 = "0.10.2"


