[package]
name = "backend"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.31.2", features = ["serde"] }
bitcoin_hashes = "0.14"
bs58 = "0.5.0"
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.14"
ic-stable-structures = "0.6.4"
ripemd = "0.1.1"
serde = "1.0.195"
sha2 = "0.10.2"


